header and footer copied. main p spacing corrected

--- a/style/about.css
+++ b/style/about.css
@@ -61,6 +61,7 @@ header {
 	display: flex;
 	flex-direction: column;
 	background-image: url("gaia.jpg");
+	background-repeat: no-repeat;
 	background-size: 100%;
 	margin: 10% 0;
 }	
@@ -158,6 +159,7 @@ footer {
 	flex-direction: column;
 	align-items: center;
 	background-image: url("gaia2.jpeg");
+	background-repeat: no-repeat;
 	background-size: 100%;
 	margin: 4% 0;
 }
