--- a/style/contact.css
+++ b/style/contact.css
@@ -1,4 +1,4 @@
-/* Add CSS styling here */
+git /* Add CSS styling here */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -61,6 +61,7 @@ header {
 	display: flex;
 	flex-direction: column;
 	background-image: url("gaia.jpg");
+	background-repeat: no-repeat;
 	background-size: 100%;
 	margin: 10% 0;
 }	
@@ -158,6 +159,7 @@ footer {
 	flex-direction: column;
 	align-items: center;
 	background-image: url("gaia2.jpeg");
+	background-repeat: no-repeat;
 	background-size: 100%;
 	margin: 4% 0;
 }
